--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 .logo  {
 	display:block;
 	color:#ff0066;
-	font-family:pacifico;
+	font-family:Pacifico;
 	font-size:2em;
 	float:left;
 	margin-left:40px;
